--- a/styles/base.css
+++ b/styles/base.css
@@ -1,5 +1,6 @@
 body {
   font-family: Muli;
+  font-size: 16px;
   color: #05386b;
   padding: 10px;
   background-color: #5cdb95;
@@ -7,6 +8,14 @@ body {
 
 * {
   box-sizing: border-box;
+}
+
+.img {
+  text-align: center;
+}
+
+.footer {
+  font-size: 12px;
 }
 
 .entete {
@@ -65,6 +74,7 @@ body {
   background-color: #edf5e1;
   padding: 20px;
   margin-top: 20px;
+  text-align: center;
 }
 
 .rangee:after {
@@ -93,4 +103,8 @@ body {
     float: none;
     width: 100%;
   }
+}
+
+.imgPartenaire {
+  margin: 20px;
 }
