--- a/styles/base.css
+++ b/styles/base.css
@@ -164,7 +164,7 @@ body {
   margin: 10px;
 }
 
-/*----------BOUTON VALIDER----------*/
+/*----------------------------------------BOUTON VALIDER----------------------------------------*/
 
 /* Css pour le conteneur du bouton. */
 .container {
@@ -268,5 +268,91 @@ button:after {
   to {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
+  }
+}
+
+/*----------------------------------------BOUTON ARC-EN-CIEL----------------------------------------*/
+
+/* Css du bouton effacer. */
+.boutonCouleur {
+  width: 220px;
+  height: 50px;
+  border: none;
+  outline: none;
+  color: #edf5e1;
+  background: #05386b;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+}
+
+/* Permet de mettre toutes les couleurs de l'arc-en-ciel. */
+.boutonCouleur:before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #7a00ff,
+    #ff00c8,
+    #ff0000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing 20s linear infinite;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+/* La couleur du texte du bouton a la base. */
+.boutonCouleur:active {
+  color: #05386b;
+}
+
+/* La couleur du background du bouton après. */
+.boutonCouleur:active:after {
+  background: transparent;
+}
+
+/* Opacité a 1 lorsqu'on survole. */
+.boutonCouleur:hover:before {
+  opacity: 1;
+}
+
+/* Css du bouton après l'animation. */
+.boutonCouleur:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #05386b;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+
+/* Permet de mettre l'animation de brillance de l'arc-en-ciel. */
+@keyframes glowing {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
   }
 }
